--- a/config/database.yml
+++ b/config/database.yml
@@ -89,6 +89,4 @@ test:
 #
 production:
   <<: *default
-  database: render_production
-  username: postgres
-  password: <%= ENV["RENDER_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
